Revise layout design

--- a/content.html
+++ b/content.html
@@ -6,7 +6,11 @@
 			Title
 		</div>
 		<div class = "navigator">
-			Navigator
+			<ul>
+				<li><a href = #> Home </a></li>
+				<li><a href = #> About </a></li>
+				<li><a href = #> Contact </a></li>
+			</ul>
 		</div>
 	</div>
 
@@ -16,7 +20,15 @@
 
 	<center>
 	<div class = "Content">
-		Content
+		<div>
+			Read Me Buttons
+		</div>
+		<div>
+			Read Me Buttons 
+		</div>
+		<div>
+			Read Me Buttons
+		</div>
 	</div>
 	</center>
 
