--- a/home.html
+++ b/home.html
@@ -1,12 +1,16 @@
 <html>
 	<link href = 'style.css' rel = 'stylesheet'>
 	<div class = "Home">
-		Image
+						<img src = "https://photofiles.alphacoders.com/364/36425.jpg">
 		<div class = "navigator">
-			NAVIGATOR
+			<ul>
+				<li><a href = #> Home </a></li>
+				<li><a href = #> About </a></li>
+				<li><a href = #> Contact </a></li>
+			</ul>
 		</div>
 		<div class = "title">
-			TITLE
+			Dougsian
 		</div>
 	</div>
 	<div class = "Footer">
