--- a/Webtechlab/INCLUSION/events.html
+++ b/Webtechlab/INCLUSION/events.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <title>
@@ -21,30 +21,31 @@
     </nav>
 
     <div id="main">
-        <div id="banner">
-            <img src="sass.jpg">
-            <h1>Events</h1>
-        </div>
+
 
 
         <div id="container">
             <div>
+                <h2>Title</h2>
                 <img src="./PIC1/1.JPG">
                 <div class="TextDescription"><p>
                     Inclusion is being promoted by Lower Dagsian's Events.</p></div>
             </div>
             <div>
+                <h2> Children's Party</h2>
                 <img src="./PIC1/1.JPG">
                 <div class="TextDescription"><p>
                     A Children's Party is open for all ages from 12 years old and below.No matter what
 differences the children have,they are still welcome to play and mingle with the youth.</p></div>
             </div>
             <div>
+                <h2>Assembly</h2>
                 <img src="./PIC1/1.JPG">
                 <div class="TextDescription"><p>An Assembly is being done around once a month to talk about the issues that happens in the barrangay.in This way the baranggay can settle all of the problems and provide solution to promote Inclusion</p></div>
             </div>
             
             <div>
+                <h2>Basketball</h2>
                 <img src="./PIC1/1.JPG">
                 <div class="TextDescription"><p>
                     The baranggay also have a Basketball Team that is being sponsored by the baranggay Captain.the team is always open to people as long as they try to join the basketball team.The Baranggay Captain even gives out jersey to those who tried to join.Also, During the Baranggay Fiesta different competitions is being held in the basketball court and also in the baranggay hall such as the sportsfest and parlor games.</p></div>
