Finalized HTML & Edited CSS

--- a/95XX-G1/95XX-G6-2/index.html
+++ b/95XX-G1/95XX-G6-2/index.html
@@ -1,29 +1,39 @@
-<!doctype html>
+<!DOCtype html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            Home Page of Inclusion 
+        </title>
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+    </head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Home Page of Inclusion
-    </title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-
-</head>
-
-<body>
-    <nav>
-        <section id="logo">Peace And Order</section>
-        <ul>
-            <li><a href="./index.html"> HOME </a></li>
-            <li><a href="./about.html"> ABOUT </a></li>
-            <li><a href="./events.html"> EVENTS </a></li>
-        </ul>
-    </nav>
-
-    <div class="background">
-        <img src="./Image2/Image2.3.JPG" alt="wearing supporter">
-    </div>
-
-</body>
+    <body>
+        <nav>
+            <section id="logo"> Inclusion </section>
+            <ul>
+                <li><a href="./index.html"> HOME </a></li>
+                <li><a href="./about.html"> ABOUT </a></li>
+                <li><a href="./events.html"> EVENTS </a></li>
+            </ul>
+        </nav>
+        
+        <div class = "wrapper">
+            <div id = "main">
+                <div class="background">
+                    <img src="./Image2/Image2.3.JPG" alt="wearing supporter">
+                </div>
+            </div>
+        </div>
+        
+        <div class= "footer">
+            <footer>
+                <h2> Contact </h2>
+                <h4> Landline: 305-1209 </h4>
+                <h4> Cellphone: 09954630901 </h4>
+                <h4> Email: lwrdagsian@yahoo.com </h4>
+            </footer>
+        </div>
+    </body>
 </html>
