--- a/95XX-G1/95XX-G6-2/about.html
+++ b/95XX-G1/95XX-G6-2/about.html
@@ -1,53 +1,56 @@
 <!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            About Peace and Order
+        </title>
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+    </head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        About Peace and Order
-    </title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-</head>
+    <body>
+        <nav>
+            <section id="logo"> Inclusion </section>
+            <ul>
+                <li><a href="./index.html"> HOME </a></li>
+                <li><a href="./about.html"> ABOUT </a></li>
+                <li><a href="./events.html"> EVENTS </a></li>
+            </ul>
+        </nav>
 
-<body>
-    <nav>
-        <section id="logo">Peace And Order</section>
-        <ul>
-            <li><a href="./index.html"> HOME </a></li>
-            <li><a href="./about.html"> ABOUT </a></li>
-            <li><a href="./events.html"> EVENTS </a></li>
-        </ul>
-    </nav>
+        <div class = "wrapper">
+            <div id="main">
+                <div id="image_slider">
+                    <figure>
+                        <img src="./Image2/Image2.6.JPG" alt="parade">
+                        <img src="./Image2/Image2.4.jpg" alt="a kid">
+                        <img src="./Image2/Image2.9.jpg" alt="a kid that supports a disable kid">
+                    </figure>
+                </div>
 
-    
-    <div id="main">
-        <div id="image_slider">
-            <figure>
-                <img src="./Image2/Image2.6.JPG" alt="parade">
-                <img src="./Image2/Image2.4.jpg" alt="a kid">
-                <img src="./Image2/Image2.9.jpg" alt="a kid that supports a disable kid">
-            </figure>
+                <h1 class="title">About</h1>
+                <div class="content">
+                    <p>Inclusion is the state of being counted in a community or a group of people.No matter what differences the people have,the people will always include everyone to the society.Inclusion is used to promote the rights of the the people with disabilities,In this way they can still express themselves to the society freely and without limitations.The main goal of Inclusion is to remove discrimination between people and other barriers such as inequality.This Baranggay the believe that Inclusion is growing day by day through by not talking about the differences that we have.<b>Person with disabilities</b> will always have a day-to-day difficulties in the society.</p>
+                    <br/>
+                    <p>That is why we always treat them with <b>consideration</b> and also not to <b>discriminate</b> them. Inclusion is seen in our baranggay everyday. For Example, the Children plays with them unconditionally andIt is seen that kids are playing with one another after classes.Also in our public transportation,They will always have the privelege to go first of the the queue.The jeepney always saves a space for the PWDs and also for the senior citizens.</p>
+                </div>
+
+                <h1 class="title">Education</h1>
+                <div class="content">
+                    <p>So far in our baranggay,the kids with disabilities still go on the same school as the more fortunate ones.But they are treated cautiously to be more comfortable.</p>
+                    <p>Lower Dagsian provides education that helps the children to perform well and promote good conduct.Despite not having a School that provides special education,The Nursery School has not yet encountered issues that has harmed the special ones.</p>
+                </div>
+            </div>
         </div>
 
-
-        
-        <h1 class="title">About</h1>
-        <div class="content">
-            <p>Inclusion is the state of being counted in a community or a group of people.No matter what differences the people have,the people will always include everyone to the society.Inclusion is used to promote the rights of the the people with disabilities,In this way they can still express themselves to the society freely and without limitations.The main goal of Inclusion is to remove discrimination between people and other barriers such as inequality.This Baranggay the believe that Inclusion is growing day by day through by not talking about the differences that we have.<b>Person with disabilities</b> will always have a day-to-day difficulties in the society.</p>
-            <br/>
-            <p>That is why we always treat them with <b>consideration</b> and also not to <b>discriminate</b> them. Inclusion is seen in our baranggay everyday. For Example, the Children plays with them unconditionally andIt is seen that kids are playing with one another after classes.Also in our public transportation,They will always have the privelege to go first of the the queue.The jeepney always saves a space for the PWDs and also for the senior citizens.</p>
+        <div class = "footer">
+            <footer>
+                <h2> Contact </h2>
+                <h4> Landline: 305-1209 </h4>
+                <h4> Cellphone: 09954630901 </h4>
+                <h4> Email: lwrdagsian@yahoo.com </h4>
+            </footer>
         </div>
-
-
-        <h1 class="title">Education</h1>
-        <div class="content">
-            <p>So far in our baranggay,the kids with disabilities still go on the same school as the more fortunate ones.But they are treated cautiously to be more comfortable.</p>
-            <p>Lower Dagsian provides education that helps the children to perform well and promote good conduct.Despite not having a School that provides special education,The Nursery School has not yet encountered issues that has harmed the special ones.</p>
-        </div>
-    </div>
-
-
-</body>
-
+    </body>
 </html>
